# MAI_OOP

./: .gitignore  .gitmodules  README.md
lab1/: CMakeLists.txt  Makefile  README.md  main.cpp
lab1/include/: Solution.hpp
lab1/src/: Solution.cpp
lab1/test/: SolutionTest.cpp
lab2/: CMakeLists.txt  Makefile  README.md  main.cpp
lab2/include/: Seven.hpp  Six.hpp  Vector.hpp
lab2/src/: Seven.cpp  Six.cpp  Vector.cpp
lab2/src/containers/: Vector.cpp
lab2/test/: test.cpp  test_seven.cpp  test_six.cpp  test_vector.cpp
lab3/: CMakeLists.txt  Makefile  README.md  main.cpp
lab3/include/: functions.hpp
lab3/include/containers/: Vector.hpp
lab3/include/figures/: Octagon.hpp  Point.hpp  Square.hpp  Triangle.hpp
lab3/include/interfaces/: figure.hpp
lab3/src/: functions.cpp
lab3/src/containers/: Vector.cpp
lab3/src/figures/: Octagon.cpp  Point.cpp  Square.cpp  Triangle.cpp
lab3/test/: OctagonTest.cpp  PointTest.cpp  SquareTest.cpp  TriangleTest.cpp  VectorTest.cpp
lab4/: CMakeLists.txt  Makefile  README.md  main.cpp
lab4/containers/: CMakeLists.txt  Vector.cpp  Vector.hpp
lab4/containers/include/: Vector.h
lab4/containers/src/: Vector.cpp
lab4/include/: Figure.h  Octagon.h  Octagon.hpp  Point.h  Point.hpp  Square.h  Square.hpp  Triangle.h  Triangle.hpp  functions.h  functions.hpp
lab4/include/interfaces/: Figure.hpp
lab4/src/: Octagon.cpp  Point.cpp  Square.cpp  Triangle.cpp  functions.cpp
lab4/test/: CMakeLists.txt  OctagonTest.cpp  PointTest.cpp  SquareTest.cpp  TriangleTest.cpp
lab5/: CMakeLists.txt  Makefile  README.md  main.cpp
lab5/include/: allocator.h  list.h
lab5/src/: allocator.cpp  list.cpp
lab5/test/: CMakeLists.txt  test_allocator.cpp  test_list.cpp
lab6/: CMakeLists.txt  Makefile  main.cpp
lab6/data/: npc.txt
lab6/logs/: log.txt
lab6/src/enums/: log_type.h  npc_status.h  npc_type.h
lab6/src/factory/: NPCFactory.cpp  NPCFactory.h
lab6/src/field/: square.cpp  square.h
lab6/src/game_manager/: game_manager.cpp  game_manager.h
lab6/src/logs/: Log.cpp  Log.h  console_logger.cpp  console_logger.h  file_logger.cpp  file_logger.h  logger.cpp  logger.h  npc_logger.cpp  npc_logger.h
lab6/src/logs/interface/: Log.h
lab6/src/npc/: druid.cpp  npc.cpp  squirrel.cpp  werewolf.cpp
lab6/src/npc/include/: druid.h  npc.h  squirrel.h  werewolf.h
lab6/src/observer/: observer.cpp  observer.h
lab6/src/observer/interface/: IObservable.h  IObserver.h
lab6/src/visitor/: visitor.cpp  visitor.h
lab6/tests/: CMakeLists.txt  Factory_test.cpp  LOG_test.cpp  NPC_test.cpp  Square_test.cpp
lab6/tests/files/: druid_data.txt  squirrel_data.txt  werewolf_data.txt
lab7/: CMakeLists.txt  Makefile  main.cpp
lab7/cmake/: CMakeLists.txt.gtest.in
lab7/include/: druid.hpp  npc.hpp  squirrel.hpp  werewolf.hpp
lab7/src/: druid.cpp  npc.cpp  squirrel.cpp  werewolf.cpp
lab7/test/: CMakeLists.txt  test.cpp
